ec-pascal/Examples/bad/Example21.pas
Program Example2;
Var       
    Num1, Num2, Sum : Integer;

Begin
	Writeln('Input number 1:'); 
	Readln(Num1);
	Writeln('Input number 2:');
	Readln(Num2);
	Sum := Num1 + Num2; 
	Writeln(SumAux);
	Readln;
End. 
